--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section class="flex flex-col gap-6 pt-16" id="aboutMe">
             <h2 class="text-xl font-bold">About Me</h2>
             <div class="flex gap-6">
-                <img src="/assets/profile.png"
+                <img  src="./assets/profile.png"
                     class="hidden md:block h-16 w-16 rounded-full bg-[var(--bg-secondary)]" />
                 <div
                     class="grid grid-cols-1 md:grid-cols-3 shadow-lg bg-[var(--bg-container-primary)] rounded-lg text-[var(--color-info)] text-xs gap-6 p-6">
